--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 
 <body>
 <h1>Hello World!</h1>
+<img src*"http://image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=杜兰特&step_"/>
 </body>
 </html>
